...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.QRCodeActivity">

        <ImageView
            android:id="@+id/go_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/circle_left_solid"
            android:layout_margin="10dp"
            android:onClick="onClickBack"/>

...
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/qr_code_details_border"
            android:layout_width="280dp"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:background="@drawable/leaderboard_border"
            android:layout_gravity="center">

...
                android:layout_marginBottom="5dp"
                android:divider="@color/zxing_transparent"
                android:dividerHeight="5dp"
                android:scrollbars="vertical" />

            <TableLayout
                android:id="@+id/bottom_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/add_comment_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/table_row_background"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="12dp"
...
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginVertical="4dp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/see_scanner_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/table_row_background"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="12dp"
                    android:onClick="onSeeScanners">
                    <TextView
                        android:text="See Who Has Scanned"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:onClick="onSeeScanners"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginVertical="4dp"/>
                </TableRow>

                <TableRow
                    android:id="@+id/see_photo_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/table_row_background"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="12dp"
                    android:onClick="seePhoto">
                    <TextView
                        android:text="See Photo"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:onClick="seePhoto"
                        android:textSize="15sp"
                        android:layout_marginVertical="4dp"/>
...
                        android:textSize="15sp"
                        android:layout_marginVertical="4dp"
                        android:onClick="seeLocation"/>
                </TableRow>

                <TableRow
                    android:id="@+id/see_comment_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/table_row_background"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="12dp">
...
                android:layout_marginTop="5dp"
                android:textSize="12sp"/>
        </LinearLayout>

        <!-- Button Icons -->
        <LinearLayout
            android:id="@+id/icon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

...
                android:layout_gravity="center"
                android:onClick="onMapClick"
                app:srcCompat="@drawable/map_icon"
                android:contentDescription="Map icon"/>

            <ImageView
                android:id="@+id/camera_icon_img"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:onClick="onCameraClick"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/camera_icon"
                android:contentDescription="Camera icon: Tap to scan a new QR Code"/>

            <ImageView
                android:id="@+id/leaderboard_icon_img"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="onLeaderboardClick"
                app:srcCompat="@drawable/leaderboard_icon"
                android:contentDescription="Leaderboard icon: Tap to view the leaderboard" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
