...
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/sample_profile"/>

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="Username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="Email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/number_edit_text"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="Phone Number"
            android:inputType="number"
            android:maxLength="14"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_sign_up_button"
            android:layout_width="271dp"
            android:layout_height="51dp"
            android:background="@drawable/black_round_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="SIGN UP"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="SignUpClick"/>

    </LinearLayout>

...
