...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/Header_Layout"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
...
                android:onClick="onViewUserProfile"
                android:src="@drawable/avatar"

                />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="Search User"
                android:inputType="textPersonName"
                android:textColor="#0f0f0f"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/add_friend_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:elevation="8dp"
                android:onClick="searchUser"
                app:srcCompat="@drawable/add_friends_icon" />
...
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/table_background"
            android:orientation="vertical">
            <ListView
                android:id="@+id/user_top_qr_table"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp"
                android:dividerHeight="5dp"
...
