...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- back btn -->
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/circle_left_solid"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onClickBack"/>
...
            android:textColor="@color/black"
            android:textSize="35sp"
            android:translationY="-40dp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/user_search_result_tbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="15dp">


...
